test/Fail/Issue4390flat.err
Issue4390flat.agda:12.28-29: error: [UnequalCohesion]
(A → A) !=< (@♭ A → A) because one is a non-flat function type and
the other is a flat function type
when checking that the expression f has type @♭ A → A
